强制更新服务器版本
